<resources>
    <string name="app_name">CalenderApp</string>
    <string name="name">Name*</string>
    <string name="email">Email*</string>
    <string name="action_save">Save</string>
    <string name="created">Created</string>
    <string name="title">Title:</string>
    <string name="created_date">Created Date:</string>
    <string name="description">Description:</string>
    <string name="description_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="date_hint">Date</string>
    <string name="add_task">Add Task</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
</resources>
