<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="post"
            type="com.calender.model.Post" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        tools:context="com.calender.DetailsActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    style="@style/details_header"
                    android:text="@string/title"
                    android:layout_weight="1.2"
                    />

                <TextView
                    android:id="@+id/titleDetailsTextView"
                    style="@style/details_value"
                    android:layout_weight="0.8"
                    android:text="@{post.title}"
                    />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                <TextView
                    style="@style/details_header"
                    android:text="@string/created_date"
                    android:layout_weight="1.2"/>

                <TextView
                    android:id="@+id/createdDateDetailsTextView"
                    style="@style/details_value"
                    android:text="@{post.createDate}"
                    android:layout_weight="0.8"/>

                </LinearLayout>

                <TextView
                    style="@style/details_header"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/createdDescriptionTextView"
                    style="@style/details_value"
                    android:text="@{post.description}" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>